--- a/GTK4GUI.ui
+++ b/GTK4GUI.ui
@@ -4,26 +4,41 @@
   <!-- interface-name commentstomd.ui -->
   <requires lib="gtk" version="4.12"/>
   <object class="GtkWindow" id="window">
-    <property name="maximized">False</property>
     <child>
       <object class="GtkBox" id="box">
         <property name="halign">center</property>
-        <property name="valign">center</property>
+        <property name="valign">start</property>
         <child>
           <object class="GtkButton" id="file_choose">
             <property name="halign">center</property>
             <property name="label">Choose File</property>
             <property name="margin-bottom">400</property>
-            <property name="margin-end">200</property>
-            <property name="margin-top">400</property>
+            <property name="margin-end">100</property>
+            <property name="margin-top">200</property>
             <property name="valign">center</property>
           </object>
         </child>
         <child>
-          <object class="GtkLabel" id="filepath">
-            <property name="label">No File Chosen</property>
-            <property name="margin-bottom">400</property>
-            <property name="valign">center</property>
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkLabel" id="filepath">
+                <property name="label">No File Chosen</property>
+                <property name="margin-bottom">200</property>
+                <property name="margin-top">100</property>
+                <property name="valign">center</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="label">Multiline Comments ONLY</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkCheckButton" id="multilineCheck">
+                <property name="halign">center</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
@@ -31,8 +46,8 @@
             <property name="halign">center</property>
             <property name="label">Create .MD </property>
             <property name="margin-bottom">400</property>
-            <property name="margin-start">200</property>
-            <property name="margin-top">400</property>
+            <property name="margin-start">100</property>
+            <property name="margin-top">200</property>
             <property name="valign">center</property>
           </object>
         </child>
